test case passing, -Dqa, more documentation, indirect creation of beans in webconfig